--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <h2>Sign In</h2>
     </div>
     <div class="form-body">
-        <form id="signInForm" action="file:///C:/Users/Nuzahath%20Tasneem/Desktop/expensetracker/index.html">
+        <form id="signInForm" action="expense.html">
             <input type="text" id="username" name="username" placeholder="Username" required><br>
             <input type="password" id="password" name="password" placeholder="Password" required><br>
             <button type="submit">Sign In</button>
